--- a/web/styles/principal.css
+++ b/web/styles/principal.css
@@ -167,7 +167,7 @@ model-viewer {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: #065F46;
+    background-color: #fbc1ab;
     display: flex;
     flex-direction: column;
     justify-content: center;
