--- a/web/styles/principal.css
+++ b/web/styles/principal.css
@@ -243,7 +243,7 @@ model-viewer {
 
 /* Barra de Navegación */
 .general {
-    background-color: #1a237e;
+    background-color: #d45d61;
     color: white;
     padding: 1rem 0;
     width: 100%;
