--- a/web/styles/principal.css
+++ b/web/styles/principal.css
@@ -15,7 +15,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    background-color: #f5f5f5;
+    background-color: #108ed6;
 }
 
 main {
@@ -62,12 +62,13 @@ p {
 /* Contenedores principales de contenido */
 .content-section {
     background-color: rgba(240, 240, 240, 0.85);
+    background-color: #fbc1ab;
     background: transparent;
     backdrop-filter: blur(5px);
     padding: 2rem;
     margin: 2rem auto;
-    max-width: 2100px;
-    border-radius: 10px;
+    max-width: 2425px;
+    border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
