--- a/web/styles/principal.css
+++ b/web/styles/principal.css
@@ -15,7 +15,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    background-color: #108ed6;
+    background-color: #f5f5f5;
 }
 
 main {
@@ -62,13 +62,12 @@ p {
 /* Contenedores principales de contenido */
 .content-section {
     background-color: rgba(240, 240, 240, 0.85);
-    background-color: #fbc1ab;
     background: transparent;
     backdrop-filter: blur(5px);
     padding: 2rem;
     margin: 2rem auto;
-    max-width: 2425px;
-    border-radius: 12px;
+    max-width: 2100px;
+    border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
@@ -193,7 +192,7 @@ model-viewer {
 .text {
     font-size: 3em;
     color: #fff;
-    letter-spacing: 28px;
+    letter-spacing: 5px;
     opacity: 0;
     animation: fadeIn 0.7s ease forwards;
     animation-delay: 0.2s;
@@ -244,7 +243,7 @@ model-viewer {
 
 /* Barra de Navegación */
 .general {
-    background-color: #d45d61;
+    background-color: #1a237e;
     color: white;
     padding: 1rem 0;
     width: 100%;
