--- a/web/styles/principal.css
+++ b/web/styles/principal.css
@@ -167,7 +167,7 @@ model-viewer {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: #125187;
+    background-color: #fbc1ab;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -177,12 +177,12 @@ model-viewer {
 }
 
 .animacion strong {
-    color: #0004ff;
+    color: #11101b ;
     animation: pulse 1.5s infinite;
 }
 
 .carro {
-    width: 300px;
+    width: 450px;
     margin-bottom: 20px;
     transform: translateX(100vw);
     animation: driveIn 1.1s cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards;
