fix:Se arreglo la vista que se habia subido del archivo DetalleFacturaEmpleado.jsp en la carpeta de web pages

--- a/web/styles/VistaEmpleados.css
+++ b/web/styles/VistaEmpleados.css
@@ -24,7 +24,7 @@ body {
     border: none;
 }
 .btn-info:hover {
-    background-color: 180f1d;
+    background-color: #341b2a;
 }
 .table thead {
     background-color: #2f344f;
